# Alpha-Graveyard

./: .gitignore  README.md  check_archive_db.py  check_db_tables.py  clean_oos_test_eth.py  clean_oos_test_sol.py  pyproject.toml  quick_db_audit.py  verify_db.py
.github/workflows/: tests.yml
alpha_graveyard/: __init__.py
alpha_graveyard/engine/: __init__.py  backtest.py  data.py  risk.py
alpha_graveyard/features/: __init__.py  regime.py  technical.py
alpha_graveyard/strategies/: __init__.py  ensemble.py  etf_flow.py  funding_arb.py  library.py  lighthouse.py
docs/: RESULTS.md
experiments/: README.md  sim_cme_gap.py  sim_cross_sectional.py  sim_daily.py  sim_daily_stress.py  sim_daily_verify.py  sim_grid.py  sim_hurst.py  sim_inverse.py  sim_lighthouse.py  sim_residual.py  sim_residual_verify.py  sim_sentiment.py  sim_weekly_mr.py  sim_wick.py
tests/: test_data_ingest.py  test_ensemble_strategy.py  test_etf_flow_signal.py  test_feature_engine.py  test_funding_rate_arb.py  test_mean_reversion.py  test_mtf_features.py  test_regime_classifier.py  test_risk_manager.py  test_strategy.py  test_vwap_strategy.py
